# hash-service

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: release-plz.yml
examples/: client.js  client.rs
proto/: hashservice.proto
scripts/: install-windows.ps1
src/: client.rs  server.rs
src/state/: hashtable.rs  mod.rs
src/tray/: mod.rs  tray.rs
