[package]
name = "hash-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ltk-hash-server"
path = "src/server.rs"

[[bin]]
name = "ltk-hash-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tray-icon = "0.21.1"
image = "0.25.8"
crossbeam-channel = "0.5.15"
directories-next = "2.0.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
walkdir = "2.4"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18.2"
[target."cfg(target_os = \"windows\")".dependencies]
winit = "0.30.12"


[build-dependencies]
tonic-prost-build = "*"
